# hcaptcha-monitor

./: .gitignore  Cargo.toml  README.md  config.json
.github/workflows/: rust-ci.yml
src/: main.rs
src/discord/: mod.rs
src/hcaptcha/: mod.rs
