[package]
name = "hcaptcha-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
anyhow = "1.0.86"
log = "0.4"
env_logger = "0.11.5"
tokio = { version = "1.0", features = ["full"] }
regex = "1.10.6"
lazy_static = "1.5.0"
base64 = "0.22.1"